@@ -4,7 +4,6 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -15,7 +14,10 @@ import static com.example.ludogoriesoft.lukeriaerpapi.enums.Permission.*;
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    CUSTOMER(
+            Set.of(CUSTOMER_READ
+            )
+    ),
     ADMIN(
             Set.of(
                     ADMIN_READ,
